2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Policy_Proce_Stand_Compliances__c.field-meta.xml
<CustomField>
    <fullName>Comment_Policy_Proce_Stand_Compliances__c</fullName>
    <description>Supervisor Comment Policy Procedure &amp; Standard Compliances</description>
    <inlineHelpText>Supervisor Comment Policy Procedure &amp; Standard Compliances.</inlineHelpText>
    <label>Comment Policy Proce &amp; Stand Compliances</label>
    <type>TextArea</type>
</CustomField>