2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Positive_Learning_Attitude__c.field-meta.xml
<CustomField>
    <fullName>Comment_Positive_Learning_Attitude__c</fullName>
    <description>Supervisor Comment for Positive Learning Attitude.</description>
    <inlineHelpText>Supervisor Comment for Positive Learning Attitude.</inlineHelpText>
    <label>Comment Positive Learning Attitude</label>
    <type>TextArea</type>
</CustomField>