2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Problem_Solving_Skills__c.field-meta.xml
<CustomField>
    <fullName>Comment_Problem_Solving_Skills__c</fullName>
    <description>Supervisor Comment Problem-Solving Skills</description>
    <inlineHelpText>Supervisor Comment Problem-Solving Skills.</inlineHelpText>
    <label>Comment Problem-Solving Skills</label>
    <type>TextArea</type>
</CustomField>