2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Product_Service_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Comment_Product_Service_Knowledge__c</fullName>
    <description>Supervisor Comment Product/Service Knowledge.</description>
    <inlineHelpText>Supervisor Comment Product/Service Knowledge.</inlineHelpText>
    <label>Comment Product/Service Knowledge</label>
    <type>TextArea</type>
</CustomField>