2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Professional_Practice_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Professional_Practice_GM__c</fullName>
    <description>Supervisor Comment Professional Practice [GM].</description>
    <inlineHelpText>Supervisor Comment Professional Practice [GM].</inlineHelpText>
    <label>Comment Professional Practice [GM]</label>
    <type>TextArea</type>
</CustomField>