2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Professional_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Comment_Professional_Presentation__c</fullName>
    <description>Supervisor Comment Professional Presentation.</description>
    <inlineHelpText>Supervisor Comment Professional Presentation.</inlineHelpText>
    <label>Comment Professional Presentation</label>
    <type>TextArea</type>
</CustomField>