2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Profit_Loss_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Profit_Loss_Management__c</fullName>
    <description>Supervisor Comment Profit &amp; Loss Management.</description>
    <inlineHelpText>Supervisor Comment Profit &amp; Loss Management.</inlineHelpText>
    <label>Comment Profit &amp; Loss Management</label>
    <type>TextArea</type>
</CustomField>