2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Project_Management_CS__c.field-meta.xml
<CustomField>
    <fullName>Comment_Project_Management_CS__c</fullName>
    <description>Supervisor Comment Project Management [CS].</description>
    <inlineHelpText>Supervisor Comment Project Management [CS].</inlineHelpText>
    <label>Comment Project Management [CS]</label>
    <type>TextArea</type>
</CustomField>