2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Comment_Quotation__c</fullName>
    <description>Supervisor Comment Quotation</description>
    <inlineHelpText>Supervisor Comment Quotation.</inlineHelpText>
    <label>Comment Quotation</label>
    <type>TextArea</type>
</CustomField>