2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Quotation_Management_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Quotation_Management_GM__c</fullName>
    <description>Supervisor Comment Quotation Management [GM]</description>
    <inlineHelpText>Supervisor Comment Quotation Management [GM].</inlineHelpText>
    <label>Comment Quotation Management [GM]</label>
    <type>TextArea</type>
</CustomField>