2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Saleforce_for_CRM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Saleforce_for_CRM__c</fullName>
    <description>Supervisor Comment Salesforce for CRM.</description>
    <inlineHelpText>Supervisor Comment Salesforce for CRM.</inlineHelpText>
    <label>Comment Saleforce for CRM</label>
    <type>TextArea</type>
</CustomField>