2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Salesforce_Processes__c.field-meta.xml
<CustomField>
    <fullName>Comment_Salesforce_Processes__c</fullName>
    <description>Supervisor Comment Salesforce Processes.</description>
    <inlineHelpText>Supervisor Comment Salesforce Processes.</inlineHelpText>
    <label>Comment Salesforce Processes</label>
    <type>TextArea</type>
</CustomField>