2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Salesforce_Processes_GM__c.field-meta.xml
<CustomField>
    <fullName>Comment_Salesforce_Processes_GM__c</fullName>
    <description>Supervisor Comment Salesforce for CRM [GM].</description>
    <inlineHelpText>Supervisor Comment Salesforce for CRM [GM].</inlineHelpText>
    <label>Comment Salesforce Processes [GM]</label>
    <type>TextArea</type>
</CustomField>