2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Service_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Service_Management__c</fullName>
    <description>Supervisor Comment Service Management</description>
    <inlineHelpText>Supervisor Comment Service Management.</inlineHelpText>
    <label>Comment Service Management</label>
    <type>TextArea</type>
</CustomField>