2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Shipment_Supervision__c.field-meta.xml
<CustomField>
    <fullName>Comment_Shipment_Supervision__c</fullName>
    <description>Supervisor Comment Shipment Supervision.</description>
    <inlineHelpText>Supervisor Comment Shipment Supervision.</inlineHelpText>
    <label>Comment Shipment Supervision</label>
    <type>TextArea</type>
</CustomField>