2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Shipping_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Comment_Shipping_Knowledge__c</fullName>
    <description>Supervisor Comment Shipping Knowledge</description>
    <inlineHelpText>Supervisor Comment Shipping Knowledge.</inlineHelpText>
    <label>Comment Shipping Knowledge</label>
    <type>TextArea</type>
</CustomField>