2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Site_survey_Job_visit__c.field-meta.xml
<CustomField>
    <fullName>Comment_Site_survey_Job_visit__c</fullName>
    <description>Supervisor Comment Site survey/ Job visit.</description>
    <inlineHelpText>Supervisor Comment Site survey/ Job visit.</inlineHelpText>
    <label>Comment Site survey/ Job visit</label>
    <type>TextArea</type>
</CustomField>