2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Stock_Check_Cycle_Count__c.field-meta.xml
<CustomField>
    <fullName>Comment_Stock_Check_Cycle_Count__c</fullName>
    <description>Comment for Stock Check &amp; Cycle Count</description>
    <inlineHelpText>Comment for Stock Check &amp; Cycle Count</inlineHelpText>
    <label>Comment Stock Check &amp; Cycle Count</label>
    <type>TextArea</type>
</CustomField>