2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Stone_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Comment_Stone_Visual_Check__c</fullName>
    <description>Comment Stone [Visual Check]</description>
    <inlineHelpText>Comment Stone [Visual Check]</inlineHelpText>
    <label>Comment Stone [Visual Check]</label>
    <type>TextArea</type>
</CustomField>