2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Strong_Time_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Strong_Time_Management__c</fullName>
    <description>Supervisor Comment Strong Time Management</description>
    <inlineHelpText>Supervisor Comment Strong Time Management.</inlineHelpText>
    <label>Comment Strong Time Management</label>
    <type>TextArea</type>
</CustomField>