2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Talent_Mgmt_Organiz_Capability__c.field-meta.xml
<CustomField>
    <fullName>Comment_Talent_Mgmt_Organiz_Capability__c</fullName>
    <description>Supervisor Comment Talent Mgmt &amp; Organizational Capability</description>
    <inlineHelpText>Supervisor Comment Talent Mgmt &amp; Organizational Capability.</inlineHelpText>
    <label>Comment Talent Mgmt &amp; Organiz Capability</label>
    <type>TextArea</type>
</CustomField>