2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Team_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Team_Management__c</fullName>
    <description>Supervisor Comment Team Management.</description>
    <inlineHelpText>Supervisor Comment Team Management.</inlineHelpText>
    <label>Comment Team Management</label>
    <type>TextArea</type>
</CustomField>