2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Textile_Data_Entry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Comment_Textile_Data_Entry_Mgmt__c</fullName>
    <description>Comment Textile [Data Entry/ Management]</description>
    <inlineHelpText>Comment Textile [Data Entry/ Management]</inlineHelpText>
    <label>Comment Textile [Data Entry/Mgmt]</label>
    <type>TextArea</type>
</CustomField>