2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Textile_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Textile_Material_Identi__c</fullName>
    <description>Supervisor Comment for Material Identification of Textile.</description>
    <inlineHelpText>Supervisor Comment for Material Identification of Textile.</inlineHelpText>
    <label>Comment Textile [Material Identi.]</label>
    <type>TextArea</type>
</CustomField>