2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Textile_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Comment_Textile_Visual_Check__c</fullName>
    <description>Supervisor Comment Textile [Visual Check]</description>
    <inlineHelpText>Supervisor Comment Textile [Visual Check]</inlineHelpText>
    <label>Comment Textile [Visual Check]</label>
    <type>TextArea</type>
</CustomField>