2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Wood_Data_Entry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Comment_Wood_Data_Entry_Mgmt__c</fullName>
    <description>Comment Wood [Data Entry/Management]</description>
    <inlineHelpText>Comment Wood [Data Entry/Management]</inlineHelpText>
    <label>Comment Wood [Data Entry/Mgmt]</label>
    <type>TextArea</type>
</CustomField>