2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Works_on_Paper_Data_Entry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Comment_Works_on_Paper_Data_Entry_Mgmt__c</fullName>
    <description>Supervisor Comment Works on Paper [Data Entry/Mgmt].</description>
    <inlineHelpText>Supervisor Comment Works on Paper [Data Entry/Mgmt].</inlineHelpText>
    <label>Comment Works on Paper [Data Entry/Mgmt]</label>
    <type>TextArea</type>
</CustomField>