2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Works_on_Paper_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Comment_Works_on_Paper_Material_Identi__c</fullName>
    <description>Supervisor Comment Works on Paper[Material Identi.]</description>
    <inlineHelpText>Supervisor Comment Works on Paper[Material Identi.]</inlineHelpText>
    <label>Comment Works on Paper[Material Identi.]</label>
    <type>TextArea</type>
</CustomField>