2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/CommentAsianwksPaper_DataEntry_Managemt__c.field-meta.xml
<CustomField>
    <fullName>CommentAsianwksPaper_DataEntry_Managemt__c</fullName>
    <description>Asian works on Paper (Hand &amp; Hanging scrolls, folding screens, etc)</description>
    <inlineHelpText>Asian works on Paper (Hand &amp; Hanging scrolls, folding screens, etc)</inlineHelpText>
    <label>CommentAsianwksPaper[DataEntry/Managemt]</label>
    <type>TextArea</type>
</CustomField>