2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/CommentCeramics_Glass_DataEntry_Managemt__c.field-meta.xml
<CustomField>
    <fullName>CommentCeramics_Glass_DataEntry_Managemt__c</fullName>
    <description>CommentCeramics&amp;Glass[DataEntry/Managemt]</description>
    <inlineHelpText>CommentCeramics&amp;Glass[DataEntry/Managemt]</inlineHelpText>
    <label>CommentCeramics&amp;Glass[DataEntry/Managemt</label>
    <type>TextArea</type>
</CustomField>