2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/CommentOtherWksOn_Paper_DataEntry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>CommentOtherWksOn_Paper_DataEntry_Mgmt__c</fullName>
    <description>Other works on Paper (Maps, Documents, Manuscripts, Books, etc)</description>
    <inlineHelpText>Other works on Paper (Maps, Documents, Manuscripts, Books, etc)</inlineHelpText>
    <label>CommentOtherWksOn Paper [DataEntry/Mgmt]</label>
    <type>TextArea</type>
</CustomField>