2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/CommentOtherWksOnPaper_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>CommentOtherWksOnPaper_Visual_Check__c</fullName>
    <description>Comment Other Works On Paper [Visual Check]</description>
    <inlineHelpText>Comment Other Works On Paper [Visual Check]</inlineHelpText>
    <label>CommentOtherWksOnPaper[Visual Check]</label>
    <type>TextArea</type>
</CustomField>