2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Communication_Skills_GM__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skills_GM__c</fullName>
    <description>-Maintain high levels of clear and concise communication with clients, and colleagues. 
 -Ability to perform administrative work</description>
    <inlineHelpText>-Maintain high levels of clear and concise communication with clients, and colleagues. 
 -Ability to perform administrative work</inlineHelpText>
    <label>Communication Skills [GM]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>