2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Communication_Skills_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skills_Shipping__c</fullName>
    <description>-Ability to understand instructions and the requirements (written and verbal)
 -Maintain high levels of clear and concise communication with authorities, agents, forwarders, vendors, colleagues, etc.  
 -Ability to perform administrative work (e.g. but not limited to: keeping a meticulous record of shipment information)</description>
    <inlineHelpText>-Ability to understand instructions and the requirements (written and verbal)
 -Maintain high levels of clear and concise communication with authorities, agents, forwarders, vendors, colleagues, etc.  
 -Ability to perform administrative work (e.g. but not limited to: keeping a meticulous record of shipment information)</inlineHelpText>
    <label>Communication Skills [Shipping]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>