2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Conflict_Management__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Management__c</fullName>
    <description>Grading for Conflict Management.</description>
    <inlineHelpText>The ability to deal with conflict in a positive and constructive manner that strengthens decision making and contributes to effective work relationships.</inlineHelpText>
    <label>Conflict Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>