2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Container_Loading__c.field-meta.xml
<CustomField>
    <fullName>Container_Loading__c</fullName>
    <description>Knowledge of loading of containers using CargoWiz to optimize the container/pallet space utilization. 
Prepare container loading plan for warehouse/operations team for container/pallet loading process</description>
    <inlineHelpText>Knowledge of loading of containers using CargoWiz to optimize the container/pallet space utilization. 
Prepare container loading plan for warehouse/operations team for container/pallet loading process</inlineHelpText>
    <label>Container Loading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>