2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Contemporary_Object_Data_Entry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Contemporary_Object_Data_Entry_Mgmt__c</fullName>
    <description>ContemporaryObject[DataEntry/Management]</description>
    <inlineHelpText>ContemporaryObject[DataEntry/Management]</inlineHelpText>
    <label>Contemporary Object [Data Entry/Mgmt]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>