2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Cost_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Cost_Effectiveness__c</fullName>
    <description>Source for cost-effective equipment for special projects (where applicable)</description>
    <inlineHelpText>Source for cost-effective equipment for special projects (where applicable)</inlineHelpText>
    <label>Cost Effectiveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>