2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Crate_Cartons_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Crate_Cartons_knowledge__c</fullName>
    <description>Knowledge of crates &amp; cartons (types / function &amp; purpose)</description>
    <inlineHelpText>Knowledge of crates &amp; cartons (types / function &amp; purpose)</inlineHelpText>
    <label>Crate &amp; Cartons knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>